Bug fix for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -192,7 +192,10 @@ footer {
     header nav,
     header nav li,
     #newsletter h1,
-    #newsletter form {
+    #newsletter form,
+    #boxes .box,
+    article#main-col,
+    aside#sidebar {
       float: none;
       text-align: center;
       width: 100%;
@@ -207,12 +210,15 @@ footer {
     }
   }
 
-  #newsletter button {
+  #newsletter button,
+  .quote button {
     display: block;
     width: 100%;
   }
 
-  #newsletter form input[type="email"] {
+  #newsletter form input[type="email"],
+  .quote input,
+  .quote textarea {
     width: 100%;
     margin-bottom: 5px;
   }
